--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -2,7 +2,7 @@
 	{{> Header}}
 	<main>
 		<div class="wrapper">
-			<h1>Welcome to Tiger Checkers</h1>
+			{{> Template.dynamic template=main}}
 		</div>
 	</main>
 </template>
