People online implementation and SCSS changes
Added feature where people can see who is online.

--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -3,6 +3,22 @@
 	<main>
 		<div class="wrapper-home">
 			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
+			<h1>Welcome to Tiger Checkers!</h1>
 		</div>
 	</main>
 </template>
