--- a/client/main.scss
+++ b/client/main.scss
@@ -1,11 +1,17 @@
 /*variables*/
 $orange: #F36E21;
+$darkOrange: #ef5902;
 $white: #fff;
 $lightGray: #EEE;
+$lightBlue: rgba(8, 157, 227, .9);
+
 $bShadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
 body{
 	background: $lightGray;
+}
+body p{
+	font-size: 1em;
 }
 header{
 	color: #FFF;
@@ -41,6 +47,9 @@ h1{
 #login-buttons .login-button, .accounts-dialog .login-button{
 	background: $orange;
 }
+#login-buttons .login-button:hover, .accounts-dialog .login-button:hover{
+	background: $darkOrange;
+}
 .wrapper{
 	margin-top: 60px;
 	padding: 50px 100px;
@@ -59,15 +68,13 @@ h1{
 .wrap-intro{
 	width: 100%;
 }
+/* -----STYLE FOR INTRO ENDS----- */
+
+/* -----STYLE FOR CHAT STARTS----- */
 .wrap-chat{
 	width: 58%;
 	float: left;
-	background: lightgrey;
-}
-.wrap-peopleOnline{
-	width: 40%;
-	float: right;
-	background: rgba(0, 204, 0, .45);
+	background: #CFD8DC;
 }
 .wrap-messages{
 	height: 280px;
@@ -81,9 +88,82 @@ h1{
 	padding: 20px;
 	margin-top: 3px;
 }
-/* -----STYLE FOR INTRO ENDS----- */
+.wrap-message{
+	width: 100%;
+	display: block;
+	clear: both;
+}
+.chat-message{
+	background-color: $lightGray;
+	padding: 10px;
+	border-radius: 10px;
+	display: inline-block;
+}
+.chat-message::first-letter{
+	text-transform: uppercase;
+}
+.own-message{
+	color: white;
+	background-color: $lightBlue;
+	text-align: right;
+	float: right;
+}
+/* -----STYLE FOR CHAT ENDS----- */
 
-
+/* -----STYLE FOR PEOPLE ONLINE STARTS----- */
+.wrap-peopleOnline{
+	width: 40%;
+	float: right;
+	background: /*rgba(0, 204, 0, .35)*/ /*rgb(142, 210, 201)*/ #CFD8DC;
+}
+.people-online{
+	height: 322px;
+	overflow-y: overlay;
+}
+.wrap-user-online, .wrap-play{
+	padding: 12px 20px 4px 20px;
+	margin-bottom: 10px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	display: inline-block;
+}
+.wrap-user-icon{
+	width: 13%;
+	display: inline-block;
+	background-color: #311B92;
+	text-align: center;
+	padding: 4px 0 13px 0;
+	margin-right: -5px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.user-icon{
+	font-size: 2em;
+	color: white;
+}
+.wrap-user-online{
+	background: white;
+	width: 68%;
+}
+.user-online{
+	font-size: 1.2em;
+	font-weight: 500;
+	color: #37474F;
+}
+.user-online::first-letter{
+	text-transform: uppercase;
+}
+.wrap-play{
+	background: #FF5722;
+	width: 19%;
+	cursor: pointer;
+	margin-left: -3px;
+}
+.play{
+	font-size: 1.2em;
+	text-align: center;
+	color: white;
+	font-weight: 500;
+}
+/* -----STYLE FOR PEOPLE ONLINE ENDS----- */
 
 
 
