--- a/client/main.scss
+++ b/client/main.scss
@@ -255,6 +255,12 @@ h1{
 }
 /* -----STYLE FOR PEOPLE ONLINE ENDS----- */
 
+/* -----STYLE FOR GAME STARTS----- */
+#svgStage{
+	background: pink;
+	border: 1px solid black;
+}
+/* -----STYLE FOR GAME ENDS----- */
 
 
 
