Game Information Section
Added Scores to that section

--- a/client/main.scss
+++ b/client/main.scss
@@ -295,6 +295,24 @@ h1{
 	width: 18%;
 	background-color: black;
 }
+.wrap-game-scores{
+	p{
+		font-size: 1.5em;
+		font-weight: 500;
+		display: inline-block;
+		width: 48%;
+		text-align: center;
+	}
+}
+.fa-circle{
+	font-size: 30px;
+}
+.red-piece{
+	color: red;
+}
+.green-piece{
+	color: green;
+}
 /* -----STYLE FOR GAME ENDS----- */
 
 
