--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,6 +1,9 @@
 <template name="Header">
 	<header>
-		<h1>Checkers</h1>
+		<h1>
+			Tiger Checkers
+			<i class="fa fa-check-circle" aria-hidden="true"></i>
+		</h1>
 		{{> loginButtons}}
 	</header>
 </template>
