--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -2,23 +2,10 @@
 	{{> Header}}
 	<main>
 		<div class="wrapper-home">
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
-			<h1>Welcome to Tiger Checkers!</h1>
+			<h2>Welcome to Tiger Checkers <i class="fa fa-check-circle" aria-hidden="true"></i></h2>
+			<p>Login or create an account to experience the most awesome experience playing checkers against your friends or whoever is online. Click on Sign in at the top right corner of the page to log in or create an account if you are not a member already!</p>
+			<br>
+			{{> Rules}}
 		</div>
 	</main>
 </template>
