--- a/client/main.scss
+++ b/client/main.scss
@@ -12,7 +12,7 @@ body{
 	background: $lightGray;
 }
 body p{
-	font-size: 1em;
+	font-size: 1.3em;
 }
 header{
 	color: #FFF;
@@ -22,13 +22,23 @@ header{
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 70px;  
+	height: 80px;  
 	box-shadow: $bShadow;
 }
 h1{
 	margin: 0;
-	font-size: 1.6em ;
+	font-size: 2.2em ;
 	float: left;
+	font-weight: 500;
+}
+h2{
+	font-size: 2em ;
+}
+h3{
+	font-size: 1.8em ;
+}
+h4{
+	font-size: 1.5em ;
 }
 .login-buttons-dropdown-align-{
 	float: right;
@@ -56,7 +66,19 @@ h1{
 	padding: 50px 100px;
 	clear: both;
 }
+/* -----STYLE FOR HOME STARTS----- */
+.wrapper-home{
+	margin: 110px 100px;
+	padding: 10px;
+	background: $lightBlueGray;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
+	p{
+		line-height: 150%;
+	}
+}
+
+/* -----STYLE FOR HOME ENDS----- */
 /* -----STYLE FOR INTRO STARTS----- */
 .wrap-intro, .wrap-chat, .wrap-peopleOnline{
 	display: inline-block;
@@ -158,7 +180,12 @@ h1{
 .deny:hover{
 	background: #962b2b;
 }
-
+.wrap-rules-intro{
+	margin-top: 20px;
+	padding: 10px;
+	background: $lightBlueGray;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
 /* -----STYLE FOR INTRO ENDS----- */
 
 /* -----STYLE FOR CHAT STARTS----- */
@@ -189,6 +216,7 @@ h1{
 	padding: 10px;
 	border-radius: 10px;
 	display: inline-block;
+	font-size: 14px;
 }
 .chat-message::first-letter{
 	text-transform: uppercase;
@@ -314,7 +342,13 @@ h1{
 	color: green;
 }
 /* -----STYLE FOR GAME ENDS----- */
-
+/* -----STYLE FOR RULES STARTS----- */
+.wrap-rules{
+	h4{
+		margin-top: 30px;
+	}
+}
+/* -----STYLE FOR RULES ENDS----- */
 
 
 
