--- a/client/main.scss
+++ b/client/main.scss
@@ -24,6 +24,7 @@ header{
 	width: 100%;
 	height: 80px;  
 	box-shadow: $bShadow;
+	z-index: 1000;
 }
 h1{
 	margin: 0;
@@ -340,6 +341,9 @@ h4{
 }
 .green-piece{
 	color: green;
+}
+.my-turn{
+	animation: bounce 2s linear infinite;
 }
 /* -----STYLE FOR GAME ENDS----- */
 /* -----STYLE FOR RULES STARTS----- */
