--- a/client/partials/Rules.html
+++ b/client/partials/Rules.html
@@ -1,5 +1,5 @@
 <template name="Rules">
-	<div class="wrap-rules">
+	<div class="rules">
 		<h2>The Rules of the Duel...</h2>
 		
 		<p>Checkers is played on a standard 64 square board. Only the 32 dark colored squares are used in play. Each player begins the game with 12 pieces, or checkers, placed in the three rows closest to him or her.</p>
